// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step3 should render normally 1`] = `
<Fragment>
  <EuiButton
    isDisabled={false}
    isLoading={false}
    onClick={[MockFunction]}
  >
    Save
  </EuiButton>
</Fragment>
`;

exports[`Step3 should show a disabled state 1`] = `
<Fragment>
  <EuiButton
    isDisabled={true}
    isLoading={false}
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    Save
  </EuiButton>
</Fragment>
`;

exports[`Step3 should show a saving state 1`] = `
<Fragment>
  <EuiButton
    isDisabled={false}
    isLoading={true}
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    Save
  </EuiButton>
</Fragment>
`;

exports[`Step3 should show an error 1`] = `
<Fragment>
  <EuiCallOut
    color="danger"
    iconType="alert"
    title="Unable to save"
  >
    <p>
      Test error
    </p>
  </EuiCallOut>
  <EuiSpacer />
  <EuiButton
    isDisabled={false}
    isLoading={false}
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    Save
  </EuiButton>
</Fragment>
`;
